# nanobot-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AwACAgQAAxkBAAIB.json  AwACAgQAAxkBAAIB.srt  AwACAgQAAxkBAAIB.tsv  AwACAgQAAxkBAAIB.txt  AwACAgQAAxkBAAIB.vtt  BACKLOG.md  BACKLOG_AUDIT_REPORT_2026-02-21.md  CLAUDE.md  Cargo.toml  Cargo.toml.backup  LOCAL_MODEL_ARCHITECTURE.md  Makefile  README.md  ROADMAP.md  SWOT.md  architecture.html  backlog.md  build.rs  checkpoint_before_changes  clippy.toml  docker-compose.yml  memory.md  previous_steps  quality-sentinel.sh
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-prompt-contract/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/phases/03-memory-ladder/: 03-01-SUMMARY.md
.planning/phases/04-learn-loop/: 04-01-SUMMARY.md
.planning/phases/06-state-driven-refactor/: AUDIT.md  PLAN.md
archive/: REVIEW-2026-02-23.md
archive/completed/: claude-code-prompt.md  free-inference-plan.md  subagent-improvements.md  tool-runner-improvements.md
archive/research/: INFERENCE_ENGINE_OPTIONS.md  PRICING_VISUAL_GUIDE.md  QUICK_SUMMARY.md  RESEARCH_SUMMARY.md  multilingual_summarization_models_report.md  z_ai_proxy_quick_reference.md  z_ai_proxy_research.md  zai_billing_research.md  zai_billing_summary.md  zhipu_ai_models_pricing.csv  zhipu_ai_models_pricing.md  zhipu_ai_quick_reference.md
bridge/ane/: Makefile  ane_bridge.m
bridge/whatsapp/: index.js  package.json
docs/: ARCHITECTURE_REVIEW.md  background_streaming_proposal.md  explained.md  icl-as-weight-update-analysis.md  retrieval-aware-distillation-analysis.md
docs/plans/: ROADMAP-original.md  adaptive_rlm_design.md  b12-config-debt-elimination.md  context-protocol.md  dynamic-model-router-diagram.txt  dynamic-model-router.md  event-log-pipeline.md  full-duplex-repl.md  local-model-matrix.md  local-model-reliability-tdd.md  local-trio-strategy-2026-02-18.md  multi-provider-refactor.md  nanobot_architecture_review.md  narration-stress-test.md  rlm-completion-proposal.md  streaming-rewrite.md  swarm-architecture.md  thinking-toggle.md  three-impossible-things.md
experiments/large-context-test/: MEMO.md  README.md  config.local.json
experiments/large-context-test/data/: arxiv_papers.csv  fetch_arxiv.py
experiments/lcm-routing/: multi_step_templates.json  orchestrator_bench.py  reference_set.json  test_bench.py  test_set.json
experiments/tool-calling/: nanbeige-prefill-tests.md  nanbeige-router-comparison.md
plans/: context-gate.md
proposals/: CONTEXT_AND_TIME_SPEC.md
scripts/: bench_mlx_endpoints.py  find_mlx_models.sh  sanitize-sessions.sh  tdd_local_models_only.sh  test_functiongemma_router.sh  test_trio_e2e.sh
skills/find-skills/: SKILL.md
skills/local-llm/: agents.json
skills/pipeline-orchestrator/: SKILL.md
skills/pipeline-worker/: SKILL.md
skills/slm-agentic-reliability/: SKILL.md
src/: cli.rs  errors.rs  lib.rs  lms.rs  main.rs  main.rs.tmp.5220.1772496556780  main.rs.tmp.5220.1772497466139  repl.rs  searxng.rs  server.rs  sessions_cmd.rs  syntax.rs  tui.rs  voice.rs  voice_pipeline.rs
src/agent/: agent_core.rs  agent_core.rs.tmp.5220.1772496264366  agent_heuristics.rs  agent_loop.rs  agent_loop.rs.tmp.5220.1772496417060  agent_loop_tests.rs  agent_profiles.rs  agent_profiles.rs.tmp.5220.1772497031721  agent_profiles.rs.tmp.5220.1772497040627  agent_profiles.rs.tmp.5220.1772497384057  agent_profiles.rs.tmp.5220.1772497421802  agent_profiles.rs.tmp.5220.1772497503164  agent_response.rs  agent_shared.rs  ane_backward.rs  ane_bridge.rs  ane_forward.rs  ane_lora.rs  ane_mil.rs  ane_mlx_bridge.rs  ane_train.rs  ane_weights.rs  anti_drift.rs  audit.rs  budget_calibrator.rs  bulletin.rs  capabilities.rs  capabilities.rs.tmp.5220.1772497024496  capabilities.rs.tmp.5220.1772497370151  capabilities.rs.tmp.5220.1772497380279  circuit_breaker.rs  compaction.rs  confidence_gate.rs  context.rs  context.rs.tmp.5220.1772496447710  context.rs.tmp.5220.1772496701831  context_gate.rs  context_hygiene.rs  context_store.rs  embedder.rs  (+69 more)
src/agent/eval/: hanoi.rs  (+7 more)
src/bus/: events.rs  queue.rs
src/channels/: base.rs  email.rs  email.rs.tmp.5220.1772495775837  email.rs.tmp.5220.1772495788529  email.rs.tmp.5220.1772495876055  email.rs.tmp.5220.1772495884187  feishu.rs  manager.rs  mod.rs  telegram.rs  whatsapp.rs
src/cli/: core_builder.rs  eval.rs  mod.rs  provider.rs  skills.rs  voice.rs
src/cluster/: discovery.rs  mod.rs  router.rs  state.rs
src/config/: loader.rs  mod.rs  schema.rs  schema.rs.tmp.5220.1772495600886  schema.rs.tmp.5220.1772495606293  schema.rs.tmp.5220.1772495617159  schema.rs.tmp.5220.1772495620204  schema.rs.tmp.5220.1772496208054  schema.rs.tmp.5220.1772496214596
src/cron/: service.rs  types.rs
src/heartbeat/: health.rs  mod.rs  service.rs
src/providers/: anthropic.rs  base.rs  claude_code.rs  constants.rs  factory.rs  jit_gate.rs  mlx.rs  mod.rs  oauth.rs  openai_compat.rs  retry.rs  transcription.rs
src/realtime/: mod.rs  session.rs  voice_agent.rs  ws_server.rs
src/repl/: cmd_channels.rs  cmd_cluster.rs  cmd_lifecycle.rs  cmd_mutation.rs  cmd_read.rs  commands.rs  incremental.rs  mod.rs  trio_helpers.rs
src/session/: db.rs  filters.rs  manager.rs  mod.rs
src/store/: conversation.rs
src/tui/: ansi.rs  component.rs  display.rs  events.rs  markdown.rs  mod.rs  stream.rs
src/utils/: helpers.rs
tests/: agent_local_cli_smoke.rs  audio_diagnostic.rs  full_attn_reference.py  gdn_reference.py  gdn_reference_tensors.npz  lcm_e2e_tests.rs  memory_pipeline_e2e.rs  protocol_tests.rs  specialist_summary_bench.rs
tests/full_attn_reference_raw/: manifest.json
tests/gdn_reference_raw/: manifest.json
thoughts/ledgers/: CONTINUITY_CLAUDE-channels-expansion.md  CONTINUITY_CLAUDE-claude-max-provider.md  CONTINUITY_CLAUDE-graduated-features.md  CONTINUITY_CLAUDE-large-context-experiment.md  CONTINUITY_CLAUDE-rlm-hardening.md  CONTINUITY_CLAUDE-strategic-roadmap.md  CONTINUITY_CLAUDE-trio-context-fix.md  CONTINUITY_CLAUDE-tui-overhaul.md  CONTINUITY_CLAUDE-voice-mode.md
thoughts/research/: kik-v11-deep-analysis.md
(+113 files in other folders)
