[package]
name = "nanobot"
version = "0.1.0"
edition = "2021"
description = "A lightweight personal AI assistant framework in Rust"
license = "MIT"
repository = "https://github.com/dusterbloom/nanobot-rs"
default-run = "nanobot"

[[bin]]
name = "nanobot"
path = "src/main.rs"

[[bin]]
name = "trio_bench"
path = "src/bin/trio_bench.rs"

[[bin]]
name = "perf_ceiling"
path = "src/bin/perf_ceiling.rs"
required-features = ["ane"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "blocking", "stream"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-chrome = { version = "0.7", optional = true }
tracing-tree = { version = "0.4", optional = true }

# Date/time
chrono = { version = "0.4", features = ["serde", "clock"] }

# Regex
regex = "1"

# Cryptographic hashing for audit log chain
sha2 = "0.10"

# Directories
dirs = "6"

# UUID
uuid = { version = "1", features = ["v4"] }

# Cron parsing
cron = "0.15"

# Byte buffers (used by reqwest streaming)
bytes = "1"

# Base64
base64 = "0.22"

# Faster, poison-free Mutex/RwLock
parking_lot = "0.12"

# HTML processing
scraper = "0.22"
html-escape = "0.2"
dom_smoothie = "0.15"
fast_html2md = "0.0.55"

# Async trait
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Retry with backoff
backon = { version = "1", features = ["tokio-sleep"] }

# REPL
rustyline = "15"

# Terminal markdown rendering
termimad = "0.30"

# Syntax highlighting for code blocks
syntect = "5"
once_cell = "1"

# Unicode display width (terminal column counting)
unicode-width = "0.2"

# Unix terminal control (stdin flush after voice recording)
libc = "0.2"

# URL parsing
url = "2"

# Language detection (only used by voice mode for TTS routing)
# Per-language features keep binary small: ~12MB for 8 langs vs ~110MB for all 75.
lingua = { version = "1.7", default-features = false, features = [
    "english", "spanish", "french", "hindi",
    "italian", "japanese", "portuguese", "chinese",
    "vietnamese",
], optional = true }

# Mime type guessing
mime_guess = "2"

# fp16 (half-precision) for ANE kernel I/O
half = { version = "2", optional = true }

# Data-parallel CPU gradient accumulation (overlaps with ANE evals)
rayon = { version = "1.10", optional = true }

# Memory-mapped file I/O for training data loader
memmap2 = { version = "0.9", optional = true }

# Accurate BPE token counting (cl100k_base, compatible with OpenAI/Claude)
tiktoken-rs = "0.6"

# SQLite with FTS5 (context store, budget calibrator, experience buffer)
rusqlite = { version = "0.32", features = ["bundled"] }

# Directed Acyclic Graph for reasoning plan decomposition
daggy = "0.8"

# Email channel (IMAP + SMTP)
async-imap = "0.10"
async-native-tls = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder"] }
mail-parser = "0.9"
arc-swap = "1.8.2"
tempfile = "3"
mdns-sd = { version = "0.11", features = ["async"], optional = true }

# Semantic search: local ONNX embeddings + SQLite vector search
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"], optional = true }
sqlite-vec = { version = "0.1", optional = true }
zerocopy = { version = "0.7", features = ["derive"], optional = true }

# Knowledge graph (entity/relation store)
petgraph = { version = "0.8", features = ["serde-1"], optional = true }

[dev-dependencies]

[features]
default = []
voice = ["dep:jack-voice", "dep:crossterm", "dep:lingua"]
trace-chrome = ["dep:tracing-chrome", "dep:tracing-tree"]
cluster = ["dep:mdns-sd"]
semantic = ["dep:fastembed", "dep:sqlite-vec", "dep:zerocopy"]
knowledge-graph = ["dep:petgraph"]
lora = ["dep:qlora-rs", "dep:candle-core"]
ane = ["dep:half", "dep:memmap2", "dep:rayon"]  # Apple Neural Engine fine-tuning (macOS Apple Silicon only)
mlx = ["dep:mlx-rs", "dep:tokenizers", "dep:axum"]  # MLX GPU LoRA training (macOS Apple Silicon)

[dependencies.jack-voice]
path = "../jack-voice/jack-voice"
optional = true

[dependencies.crossterm]
version = "0.28"
optional = true

# QLoRA training: 4-bit quantized LoRA fine-tuning with GGUF export
[dependencies.qlora-rs]
version = "1.0"
optional = true
features = ["gguf-export"]

[dependencies.candle-core]
version = "0.9"
optional = true

# MLX: Apple Silicon GPU acceleration for LoRA training
[dependencies.mlx-rs]
version = "0.25"
optional = true
features = ["safetensors"]

# Axum web framework (used for MLX inference server)
[dependencies.axum]
version = "0.8"
optional = true
features = ["json"]

# HuggingFace tokenizers (BPE/Unigram/WordPiece — reads tokenizer.json)
[dependencies.tokenizers]
version = "0.22"
optional = true
default-features = false
features = ["onig"]
